fixed flickering

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ div.img-container {
 } 
 
 div.img-container img {
-  width: 15em;
+  height: 15em;
 } 
 
 p {
